# AlphaGoLite

./: README.md
cpp/: CMakeLists.txt  build.sh  selfplay.cpp
cpp/common/: logger.cpp  logger.h
cpp/game/: board.cpp  board.h  board_history.h
cpp/model/: board.h
cpp/neuralnet/: nneval.h
cpp/smoke_tests/: logger.cpp
python/: export_model.py  exporter.py  pyproject.toml  train.py
script/: synchronous_loop.sh
