[tool.poetry]
name = "alphagolite"
version = "0.1.0"
description = ""
authors = ["Wang Yiwen <121547057+yiwen101@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.15"
torch = "^2.5.1"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
